<resources>
    <string name="app_name">SB Delivery</string>
    <string name="made_by_yasina">Сделано Заляловой Ясиной\nTelegram: @yassinaa</string>
    <string name="empty_list">Данные не найдены</string>
    <string name="try_again">Повторить запрос</string>
    <string name="rub">%s ₽</string>
    <string name="number">№ %s</string>
    <string name="network_is_unavailable">Сеть недоступна</string>
    <string name="main_empty_list">Данные не найдены.\nПодключитесь к Интернету, чтобы получить последние данные</string>

    <!-- sign -->
    <string name="sign_in">Вход</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="wrong_email">Некорректный e-mail</string>
    <string name="wrong_name">Можно вводить только буквы</string>
    <string name="wrong_password">Пароль не может быть пустым</string>
    <string name="password">Пароль</string>
    <string name="to_enter">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="to_sign_up">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="forget_password_text">Введите электронную почту, которую вы
        использовали при регистрации, и мы вышлем на
        нее код для восстановления пароля</string>
    <string name="send">Отправить</string>
    <string name="input_verification_code">Введите проверочный код</string>
    <string name="input_new_password">Введите новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="save">Сохранить</string>

    <!-- drawer -->
    <string name="menu_main">Главная</string>
    <string name="menu_menu">Меню</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_about_app">О приложении</string>
    <string name="enter_to_the_profile">Войти в профиль</string>

    <!-- menu -->
    <string name="search">Поиск</string>
    <string name="promotions">Акции</string>
    <string name="drinks">Напитки</string>
    <string name="sauces">Соусы</string>
    <string name="snacks">Закуски</string>
    <string name="deserts">Десерты</string>
    <string name="salads">Салаты</string>
    <string name="dumplings">Пельмени</string>
    <string name="paste">Паста</string>
    <string name="side_dishes">Гарниры</string>
    <string name="main_dish">Основное блюдо</string>
    <string name="combo_set">Комбо</string>
    <string name="pizza">Пицца</string>
    <string name="sushi_and_rolls">Суши и роллы</string>
    <string name="burgers">Бургеры</string>
    <string name="soups">Супы</string>
    <string name="hot_dishes">Горячее</string>

    <!-- main -->
    <string name="recommend">Рекомендуем</string>
    <string name="see_all">См. все</string>
    <string name="best">Лучшее</string>
    <string name="popular">Популярное</string>
    <string name="promotion">Акция</string>

    <!-- search -->
    <string name="search_dishes">Поиск блюд</string>
    <string name="category">Категория</string>

    <!-- dish -->
    <string name="dish">Блюдо</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="customer_reviews">Отзывы</string>
    <string name="add_customer_review">Добавить отзыв</string>
    <string name="empty_customer_reviews">Пока что нет отзывов по данному блюду</string>
    <string name="rating">%s/5</string>

    <!-- review dialog -->
    <string name="leave_a_review">Оставить отзыв</string>
    <string name="input_review">Введите отзыв</string>

    <!-- basket -->
    <string name="input_promocode">Введите промокод</string>
    <string name="apply">Применить</string>
    <string name="total">Итого</string>
    <string name="to_proceed_to_checkout">Оформить заказ</string>
    <string name="discount">Скидка %s рублей!</string>
    <string name="empty_basket">Корзина пуста.\nДобавьте блюда в корзину,\nчтобы увидеть их здесь</string>
    
    <!-- order details -->
    <string name="proceed_to_checkout">Оформление заказа</string>
    <string name="address">Адрес:</string>
    <string name="write">Написать</string>
    <string name="edit">Редактировать</string>
    <string name="show_on_map">Указать на карте</string>
    <string name="input_address">Указание адреса</string>
    <string name="porch">Подъезд:</string>
    <string name="floor">Этаж:</string>
    <string name="flat">Квартира:</string>
    <string name="intercom">Домофон:</string>
    <string name="comment">Комментарий:</string>
    <string name="choose_address">Выбрать адрес</string>
    <string name="address_input">г. %s, ул. %s, д. %s</string>

    <!-- profile -->
    <string name="change">Изменить</string>
    <string name="to_change_password">Сменить пароль</string>
    <string name="cancel">Отменить</string>

    <!-- change password -->
    <string name="change_password">Смена пароля</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>

    <!-- orders -->
    <string name="current_orders">Актуальные</string>
    <string name="completed_orders">Выполненные</string>

    <!-- created order -->
    <string name="created_order">Созданный заказ</string>
    <string name="status">Статус:</string>
    <string name="total_price">Сумма:</string>
    <string name="date">Дата:</string>
    <string name="cancel_the_order">Отменить заказ</string>
    <string name="order_list">Состав заказа:</string>
    <string name="count">%s шт.</string>

</resources>