<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_created_order">

    <fragment
        android:id="@+id/nav_main"
        android:name="ru.skillbranch.sbdelivery.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="ru.skillbranch.sbdelivery.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="ru.skillbranch.sbdelivery.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="ru.skillbranch.sbdelivery.ui.basket.BasketFragment"
        android:label="@string/menu_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.skillbranch.sbdelivery.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="ru.skillbranch.sbdelivery.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_created_order" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="ru.skillbranch.sbdelivery.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_about_app"
        android:name="ru.skillbranch.sbdelivery.ui.aboutapp.AboutAppFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/nav_search"
        android:name="ru.skillbranch.sbdelivery.ui.search.SearchFragment"
        android:label="@string/search_dishes"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_category"
        android:name="ru.skillbranch.sbdelivery.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_dish"
        android:name="ru.skillbranch.sbdelivery.ui.dish.DishFragment"
        android:label="@string/dish"
        tools:layout="@layout/fragment_dish" />

    <fragment
        android:id="@+id/nav_proceed_to_checkout"
        android:name="ru.skillbranch.sbdelivery.ui.orderdetails.OrderDetailsFragment"
        android:label="@string/proceed_to_checkout"
        tools:layout="@layout/fragment_order_details" />

    <fragment
        android:id="@+id/nav_input_address"
        android:name="ru.skillbranch.sbdelivery.ui.orderdetails.inputaddress.InputAddressFragment"
        android:label="@string/input_address"
        tools:layout="@layout/fragment_input_address" />

    <fragment
        android:id="@+id/nav_map_address"
        android:name="ru.skillbranch.sbdelivery.ui.orderdetails.map.MapAddressFragment"
        android:label="@string/input_address"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_created_order"
        android:name="ru.skillbranch.sbdelivery.ui.orders.createdorder.CreatedOrderFragment"
        android:label="@string/created_order"
        tools:layout="@layout/fragment_created_order" />

</navigation>