<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_bowl"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_basket"
            android:title="@string/menu_basket"
            app:actionLayout="@layout/nav_counter"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_orders"
            app:actionLayout="@layout/nav_counter"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications"
            app:actionLayout="@layout/nav_counter"/>
    </group>
</menu>