<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/tv_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/status"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="В обработке"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_status_title"
        tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/tv_total_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/total_price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_title"/>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1130 руб"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"
        app:layout_constraintStart_toEndOf="@+id/tv_status_title"
        tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/tv_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/address"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_price_title"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="г. Москва, ул. Тверская, д. 5"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_price"
        app:layout_constraintStart_toEndOf="@+id/tv_status_title"
        tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/tv_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_title"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="5 апреля 2020"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        app:layout_constraintStart_toEndOf="@+id/tv_status_title"
        tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mb_cancel_the_order"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:strokeWidth="1dp"
        app:cornerRadius="6dp"
        app:strokeColor="@color/grey_btn3"
        android:text="@string/cancel_the_order"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:letterSpacing="0"
        android:textColor="@color/colorPrimary"
        android:paddingTop="12.97dp"
        android:paddingBottom="15.03dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/order_list"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_cancel_the_order"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/rv_items"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/grey_text"
        tools:itemCount="5"
        android:fadeScrollbars="false"
        tools:listitem="@layout/item_created_order"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_list_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>