<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:id="@+id/rv_items"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/grey_text"
        tools:itemCount="5"
        android:fadeScrollbars="false"
        tools:listitem="@layout/item_basket"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_promocode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_promocode"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey_btn2"
        android:paddingBottom="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mb_apply"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mb_apply"
        app:cornerRadius="6dp"
        app:backgroundTint="@color/grey_btn2"
        android:text="@string/apply"
        android:fontFamily="sans-serif"
        android:textColor="@color/grey_text"
        android:textSize="14sp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:enabled="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_items"/>

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:text="@string/discount"
        android:fontFamily="sans-serif"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_promocode"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:text="@string/total"
        android:fontFamily="sans-serif"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_price"
        app:layout_constraintBottom_toTopOf="@+id/mb_proceed_to_checkout"/>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        tools:text="2540 Р"
        android:fontFamily="sans-serif"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintStart_toEndOf="@+id/tv_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mb_proceed_to_checkout"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mb_proceed_to_checkout"
        app:cornerRadius="6dp"
        app:backgroundTint="@color/orange_button_color"
        android:text="@string/to_proceed_to_checkout"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:paddingTop="12.98dp"
        android:paddingBottom="15.02dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>