<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:text="@string/name"
        android:textAppearance="@style/TextViewSign"
        android:layout_marginTop="38dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_name_error"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name_error"
        tools:text="@string/wrong_email"
        android:textAppearance="@style/TextViewSignError"
        android:textAlignment="textEnd"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tif_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxCornerRadiusTopStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_surname"
        android:text="@string/surname"
        android:textAppearance="@style/TextViewSign"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tif_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_surname_error"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_surname_error"
        tools:text="@string/wrong_email"
        android:textAppearance="@style/TextViewSignError"
        android:textAlignment="textEnd"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintTop_toBottomOf="@+id/tif_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_surname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tif_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxCornerRadiusTopStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:id="@+id/tiet_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email"
        android:text="@string/email"
        android:textAppearance="@style/TextViewSign"
        android:layout_marginTop="16dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tif_surname"
        app:layout_constraintEnd_toStartOf="@+id/tv_email_error"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email_error"
        android:text="@string/wrong_email"
        android:textAppearance="@style/TextViewSignError"
        android:textAlignment="textEnd"
        android:layout_marginTop="133dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintTop_toBottomOf="@+id/tif_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tif_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxCornerRadiusTopStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mb_change"
        app:cornerRadius="6dp"
        app:backgroundTint="@color/orange_button_color"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:paddingTop="12.97dp"
        android:paddingBottom="15.03dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="53dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tif_email"
        app:layout_constraintTop_toBottomOf="@+id/tif_email"
        app:layout_constraintStart_toStartOf="@+id/tif_email"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mb_change_password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:strokeWidth="1dp"
        app:cornerRadius="6dp"
        app:strokeColor="@color/grey"
        android:text="@string/to_change_password"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:letterSpacing="0"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:paddingTop="12.97dp"
        android:paddingBottom="15.03dp"
        app:layout_constraintEnd_toEndOf="@+id/mb_change"
        app:layout_constraintTop_toBottomOf="@+id/mb_change"
        app:layout_constraintStart_toStartOf="@+id/mb_change"/>

</androidx.constraintlayout.widget.ConstraintLayout>